--- a/index.html
+++ b/index.html
@@ -146,217 +146,7 @@
   </div>
 
   <script>
-    // User data (plain text passwords, patterns, and answers)
-    const users = {
-      'rifat': {
-        password: '312205',
-        pattern: [5,2,8,4,3,7,6,1,9],
-        questions: [
-          { q: 'What is your favorite book?', answer: 'ebook' },
-          { q: 'What was your first pet’s name?', answer: 'donno' },
-          { q: 'What city were you born in?', answer: 'unborn' }
-        ]
-      },
-      'apurbo': {
-        password: 'acs@uhf',
-        pattern: [7,4,1,5,3,6,9],
-        questions: [
-          { q: 'Who is your crush?', answer: 'maria' },
-          { q: 'What was your dream with her?', answer: 'marry' },
-          { q: 'What city were you born in?', answer: 'mohanganj' }
-        ]
-      },
-      'shofiur': {
-        password: 'password3',
-        pattern: [1,2,3,6,5,4,7,8,9],
-        questions: [
-          { q: 'What is your favorite book?', answer: 'book1' },
-          { q: 'What was your first pet’s name?', answer: 'pet1' },
-          { q: 'What city were you born in?', answer: 'city1' }
-        ]
-      }
-    };
-
-    let currentUser = null;
-    let totalAttempts = 0;
-    const maxAttempts = 3;
-
-    // Layer 1: Username and Password
-    function verifyLogin() {
-      if (totalAttempts >= maxAttempts) {
-        document.getElementById('login-error').textContent = 'Too many attempts. Access blocked.';
-        disableInputs();
-        return;
-      }
-
-      const username = document.getElementById('username').value.toLowerCase();
-      const password = document.getElementById('password').value;
-      const error = document.getElementById('login-error');
-
-      if (users[username]) {
-        if (password === users[username].password) {
-          currentUser = username;
-          document.getElementById('login').classList.add('hidden');
-          document.getElementById('pattern-lock').classList.remove('hidden');
-        } else {
-          totalAttempts++;
-          error.textContent = `Invalid password. ${maxAttempts - totalAttempts} attempts left.`;
-        }
-      } else {
-        totalAttempts++;
-        error.textContent = `Invalid username. ${maxAttempts - totalAttempts} attempts left.`;
-      }
-    }
-
-    // Layer 2: Pattern Lock
-    const canvas = document.getElementById('patternCanvas');
-    const ctx = canvas.getContext('2d');
-    let currentPattern = [];
-    let isDrawing = false;
-
-    const dots = [
-      { x: 50, y: 50, id: 1 }, { x: 150, y: 50, id: 2 }, { x: 250, y: 50, id: 3 },
-      { x: 50, y: 150, id: 4 }, { x: 150, y: 150, id: 5 }, { x: 250, y: 150, id: 6 },
-      { x: 50, y: 250, id: 7 }, { x: 150, y: 250, id: 8 }, { x: 250, y: 250, id: 9 }
-    ];
-
-    function drawDots() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      dots.forEach(dot => {
-        ctx.beginPath();
-        ctx.arc(dot.x, dot.y, 20, 0, 2 * Math.PI);
-        ctx.fillStyle = currentPattern.includes(dot.id) ? '#00f7ff' : 'rgba(255, 255, 255, 0.3)';
-        ctx.fill();
-        ctx.strokeStyle = currentPattern.includes(dot.id) ? '#ff00cc' : 'rgba(255, 255, 255, 0.2)';
-        ctx.lineWidth = 2;
-        ctx.stroke();
-      });
-
-      if (currentPattern.length >= 2) {
-        const startIndex = currentPattern[0] - 1;
-        const endIndex = currentPattern[currentPattern.length - 1] - 1;
-
-        if (startIndex >= 0 && endIndex >= 0 && startIndex < dots.length && endIndex < dots.length) {
-          const startDot = dots[startIndex];
-          const endDot = dots[endIndex];
-
-          if (startDot && endDot && !isNaN(startDot.x) && !isNaN(startDot.y) && !isNaN(endDot.x) && !isNaN(endDot.y)) {
-            ctx.beginPath();
-            ctx.moveTo(startDot.x, startDot.y);
-            for (let i = 1; i < currentPattern.length; i++) {
-              const dotIndex = currentPattern[i] - 1;
-              if (dotIndex >= 0 && dotIndex < dots.length) {
-                const dot = dots[dotIndex];
-                if (dot && !isNaN(dot.x) && !isNaN(dot.y)) {
-                  ctx.lineTo(dot.x, dot.y);
-                }
-              }
-            }
-
-            const gradient = ctx.createLinearGradient(startDot.x, startDot.y, endDot.x, endDot.y);
-            gradient.addColorStop(0, '#00f7ff');
-            gradient.addColorStop(1, '#ff00cc');
-            ctx.strokeStyle = gradient;
-            ctx.lineWidth = 5;
-            ctx.stroke();
-          }
-        }
-      }
-    }
-
-    canvas.addEventListener('mousedown', (e) => {
-      isDrawing = true;
-      checkDot(e);
-    });
-
-    canvas.addEventListener('mousemove', (e) => {
-      if (isDrawing) checkDot(e);
-    });
-
-    canvas.addEventListener('mouseup', () => {
-      isDrawing = false;
-    });
-
-    canvas.addEventListener('touchstart', (e) => {
-      isDrawing = true;
-      checkDot(e.touches[0]);
-    });
-
-    canvas.addEventListener('touchmove', (e) => {
-      if (isDrawing) {
-        e.preventDefault();
-        checkDot(e.touches[0]);
-      }
-    });
-
-    canvas.addEventListener('touchend', () => {
-      isDrawing = false;
-    });
-
-    function checkDot(e) {
-      const rect = canvas.getBoundingClientRect();
-      const x = e.clientX - rect.left;
-      const y = e.clientY - rect.top;
-      dots.forEach(dot => {
-        if (Math.sqrt((x - dot.x) ** 2 + (y - dot.y) ** 2) < 20 && !currentPattern.includes(dot.id)) {
-          currentPattern.push(dot.id);
-          drawDots();
-        }
-      });
-    }
-
-    function resetPattern() {
-      currentPattern = [];
-      drawDots();
-    }
-
-    function verifyPattern() {
-      if (totalAttempts >= maxAttempts) {
-        document.getElementById('pattern-error').textContent = 'Too many attempts. Access blocked.';
-        disableInputs();
-        return;
-      }
-      if (currentPattern.join() === users[currentUser].pattern.join()) {
-        document.getElementById('pattern-lock').classList.add('hidden');
-        document.getElementById('security-question').classList.remove('hidden');
-        const questions = users[currentUser].questions;
-        const selectedQuestion = questions[Math.floor(Math.random() * questions.length)];
-        document.getElementById('question').textContent = selectedQuestion.q;
-        window.selectedQuestion = selectedQuestion;
-      } else {
-        totalAttempts++;
-        document.getElementById('pattern-error').textContent = `Invalid pattern. ${maxAttempts - totalAttempts} attempts left.`;
-        resetPattern();
-      }
-    }
-
-    drawDots();
-
-    // Layer 3: Security Question
-    function verifyAnswer() {
-      if (totalAttempts >= maxAttempts) {
-        document.getElementById('question-error').textContent = 'Too many attempts. Access blocked.';
-        disableInputs();
-        return;
-      }
-      const answer = document.getElementById('answer').value;
-      if (answer === window.selectedQuestion.answer) {
-        document.getElementById('security-question').classList.add('hidden');
-        document.getElementById('content').classList.remove('hidden');
-        // Redirect to index.html after showing welcome
-        setTimeout(() => {
-          window.location.href = 'stories.html';
-        }, 800); // Redirect after 2 seconds to allow user to see the welcome message
-      } else {
-        totalAttempts++;
-        document.getElementById('question-error').textContent = `Incorrect answer. ${maxAttempts - totalAttempts} attempts left.`;
-      }
-    }
-
-    // Disable inputs on lockout
-    function disableInputs() {
-      document.querySelectorAll('input, button').forEach(el => el.disabled = true);
-    }
+    function _0x1e23(){const _0x52f67b=['8NbQJou','Invalid\x20password.\x20','rgba(255,\x20255,\x20255,\x200.3)','Incorrect\x20answer.\x20','addColorStop','maria','mousemove','length','touches','#00f7ff','getBoundingClientRect','join','acs@uhf','What\x20is\x20your\x20favorite\x20book?','57QeyTUm','top','mohanganj','strokeStyle','width','Invalid\x20pattern.\x20','donno','push','includes','selectedQuestion','height','Who\x20is\x20your\x20crush?','book1','lineWidth','password3','querySelectorAll','touchend','pattern','clearRect','forEach','312205','mouseup','city1','moveTo','#ff00cc','question-error','password','pet1','5096550gcXMZD','getContext','14301060ePpZdM','add','rgba(255,\x20255,\x20255,\x200.2)','answer','40520wlFVnE','Too\x20many\x20attempts.\x20Access\x20blocked.','4492212sCJyTv','12242KfJFFu','What\x20city\x20were\x20you\x20born\x20in?','getElementById','pattern-error','sqrt','toLowerCase','questions','classList','addEventListener','1693044StcBEx','hidden','What\x20was\x20your\x20dream\x20with\x20her?','textContent','stroke','left','href','disabled','preventDefault','clientX','security-question','mousedown','login','value','\x20attempts\x20left.','Invalid\x20username.\x20','random','8mujyoq','1384530DExyaw','pattern-lock','fill','content','stories.html','marry','input,\x20button','location','What\x20was\x20your\x20first\x20pet’s\x20name?','floor','unborn'];_0x1e23=function(){return _0x52f67b;};return _0x1e23();}const _0x6eed9b=_0x3754;(function(_0x1df5da,_0x1e1a4c){const _0x4b81ff=_0x3754,_0x2a2fc5=_0x1df5da();while(!![]){try{const _0x3a90ba=-parseInt(_0x4b81ff(0x1e4))/0x1*(-parseInt(_0x4b81ff(0x1be))/0x2)+parseInt(_0x4b81ff(0x1f2))/0x3*(parseInt(_0x4b81ff(0x1bb))/0x4)+parseInt(_0x4b81ff(0x1b5))/0x5+parseInt(_0x4b81ff(0x1bd))/0x6+parseInt(_0x4b81ff(0x1d9))/0x7+parseInt(_0x4b81ff(0x1d8))/0x8*(-parseInt(_0x4b81ff(0x1c7))/0x9)+-parseInt(_0x4b81ff(0x1b7))/0xa;if(_0x3a90ba===_0x1e1a4c)break;else _0x2a2fc5['push'](_0x2a2fc5['shift']());}catch(_0xc023f0){_0x2a2fc5['push'](_0x2a2fc5['shift']());}}}(_0x1e23,0x8fcda));const users={'rifat':{'password':_0x6eed9b(0x1ad),'pattern':[0x5,0x2,0x8,0x4,0x3,0x7,0x6,0x1,0x9],'questions':[{'q':'What\x20is\x20your\x20favorite\x20book?','answer':'ebook'},{'q':_0x6eed9b(0x1e1),'answer':_0x6eed9b(0x1f8)},{'q':_0x6eed9b(0x1bf),'answer':_0x6eed9b(0x1e3)}]},'apurbo':{'password':_0x6eed9b(0x1f0),'pattern':[0x7,0x4,0x1,0x5,0x3,0x6,0x9],'questions':[{'q':_0x6eed9b(0x1fd),'answer':_0x6eed9b(0x1e9)},{'q':_0x6eed9b(0x1c9),'answer':_0x6eed9b(0x1de)},{'q':_0x6eed9b(0x1bf),'answer':_0x6eed9b(0x1f4)}]},'shofiur':{'password':_0x6eed9b(0x200),'pattern':[0x1,0x2,0x3,0x6,0x5,0x4,0x7,0x8,0x9],'questions':[{'q':_0x6eed9b(0x1f1),'answer':_0x6eed9b(0x1fe)},{'q':_0x6eed9b(0x1e1),'answer':_0x6eed9b(0x1b4)},{'q':_0x6eed9b(0x1bf),'answer':_0x6eed9b(0x1af)}]}};let currentUser=null,totalAttempts=0x0;const maxAttempts=0x3;function verifyLogin(){const _0x45f4ef=_0x6eed9b;if(totalAttempts>=maxAttempts){document['getElementById']('login-error')[_0x45f4ef(0x1ca)]='Too\x20many\x20attempts.\x20Access\x20blocked.',disableInputs();return;}const _0x52cae6=document['getElementById']('username')[_0x45f4ef(0x1d4)][_0x45f4ef(0x1c3)](),_0x5650bc=document[_0x45f4ef(0x1c0)](_0x45f4ef(0x1b3))[_0x45f4ef(0x1d4)],_0xbca050=document['getElementById']('login-error');users[_0x52cae6]?_0x5650bc===users[_0x52cae6][_0x45f4ef(0x1b3)]?(currentUser=_0x52cae6,document[_0x45f4ef(0x1c0)](_0x45f4ef(0x1d3))[_0x45f4ef(0x1c5)][_0x45f4ef(0x1b8)]('hidden'),document['getElementById']('pattern-lock')[_0x45f4ef(0x1c5)]['remove'](_0x45f4ef(0x1c8))):(totalAttempts++,_0xbca050[_0x45f4ef(0x1ca)]=_0x45f4ef(0x1e5)+(maxAttempts-totalAttempts)+_0x45f4ef(0x1d5)):(totalAttempts++,_0xbca050[_0x45f4ef(0x1ca)]=_0x45f4ef(0x1d6)+(maxAttempts-totalAttempts)+_0x45f4ef(0x1d5));}const canvas=document[_0x6eed9b(0x1c0)]('patternCanvas'),ctx=canvas[_0x6eed9b(0x1b6)]('2d');let currentPattern=[],isDrawing=![];const dots=[{'x':0x32,'y':0x32,'id':0x1},{'x':0x96,'y':0x32,'id':0x2},{'x':0xfa,'y':0x32,'id':0x3},{'x':0x32,'y':0x96,'id':0x4},{'x':0x96,'y':0x96,'id':0x5},{'x':0xfa,'y':0x96,'id':0x6},{'x':0x32,'y':0xfa,'id':0x7},{'x':0x96,'y':0xfa,'id':0x8},{'x':0xfa,'y':0xfa,'id':0x9}];function drawDots(){const _0x256102=_0x6eed9b;ctx[_0x256102(0x204)](0x0,0x0,canvas[_0x256102(0x1f6)],canvas[_0x256102(0x1fc)]),dots[_0x256102(0x1ac)](_0x5addc9=>{const _0x48b2b4=_0x256102;ctx['beginPath'](),ctx['arc'](_0x5addc9['x'],_0x5addc9['y'],0x14,0x0,0x2*Math['PI']),ctx['fillStyle']=currentPattern['includes'](_0x5addc9['id'])?_0x48b2b4(0x1ed):_0x48b2b4(0x1e6),ctx[_0x48b2b4(0x1db)](),ctx[_0x48b2b4(0x1f5)]=currentPattern['includes'](_0x5addc9['id'])?'#ff00cc':_0x48b2b4(0x1b9),ctx[_0x48b2b4(0x1ff)]=0x2,ctx[_0x48b2b4(0x1cb)]();});if(currentPattern[_0x256102(0x1eb)]>=0x2){const _0x4d2350=currentPattern[0x0]-0x1,_0x436307=currentPattern[currentPattern[_0x256102(0x1eb)]-0x1]-0x1;if(_0x4d2350>=0x0&&_0x436307>=0x0&&_0x4d2350<dots[_0x256102(0x1eb)]&&_0x436307<dots['length']){const _0x4cbfd3=dots[_0x4d2350],_0x1b6c88=dots[_0x436307];if(_0x4cbfd3&&_0x1b6c88&&!isNaN(_0x4cbfd3['x'])&&!isNaN(_0x4cbfd3['y'])&&!isNaN(_0x1b6c88['x'])&&!isNaN(_0x1b6c88['y'])){ctx['beginPath'](),ctx[_0x256102(0x1b0)](_0x4cbfd3['x'],_0x4cbfd3['y']);for(let _0x49d12d=0x1;_0x49d12d<currentPattern['length'];_0x49d12d++){const _0x91ece0=currentPattern[_0x49d12d]-0x1;if(_0x91ece0>=0x0&&_0x91ece0<dots[_0x256102(0x1eb)]){const _0xe8fc18=dots[_0x91ece0];_0xe8fc18&&!isNaN(_0xe8fc18['x'])&&!isNaN(_0xe8fc18['y'])&&ctx['lineTo'](_0xe8fc18['x'],_0xe8fc18['y']);}}const _0x2890ce=ctx['createLinearGradient'](_0x4cbfd3['x'],_0x4cbfd3['y'],_0x1b6c88['x'],_0x1b6c88['y']);_0x2890ce[_0x256102(0x1e8)](0x0,_0x256102(0x1ed)),_0x2890ce[_0x256102(0x1e8)](0x1,_0x256102(0x1b1)),ctx[_0x256102(0x1f5)]=_0x2890ce,ctx[_0x256102(0x1ff)]=0x5,ctx['stroke']();}}}}canvas['addEventListener'](_0x6eed9b(0x1d2),_0x18e5ea=>{isDrawing=!![],checkDot(_0x18e5ea);}),canvas['addEventListener'](_0x6eed9b(0x1ea),_0x2d0e62=>{if(isDrawing)checkDot(_0x2d0e62);}),canvas[_0x6eed9b(0x1c6)](_0x6eed9b(0x1ae),()=>{isDrawing=![];}),canvas[_0x6eed9b(0x1c6)]('touchstart',_0x8f98da=>{const _0x1f16d3=_0x6eed9b;isDrawing=!![],checkDot(_0x8f98da[_0x1f16d3(0x1ec)][0x0]);}),canvas[_0x6eed9b(0x1c6)]('touchmove',_0x243f68=>{const _0x2f3a1f=_0x6eed9b;isDrawing&&(_0x243f68[_0x2f3a1f(0x1cf)](),checkDot(_0x243f68['touches'][0x0]));}),canvas[_0x6eed9b(0x1c6)](_0x6eed9b(0x202),()=>{isDrawing=![];});function checkDot(_0x443532){const _0x2a298e=_0x6eed9b,_0x1264a0=canvas[_0x2a298e(0x1ee)](),_0x27ad50=_0x443532[_0x2a298e(0x1d0)]-_0x1264a0[_0x2a298e(0x1cc)],_0x59edd4=_0x443532['clientY']-_0x1264a0[_0x2a298e(0x1f3)];dots[_0x2a298e(0x1ac)](_0x54ce58=>{const _0xc0ddce=_0x2a298e;Math[_0xc0ddce(0x1c2)]((_0x27ad50-_0x54ce58['x'])**0x2+(_0x59edd4-_0x54ce58['y'])**0x2)<0x14&&!currentPattern[_0xc0ddce(0x1fa)](_0x54ce58['id'])&&(currentPattern[_0xc0ddce(0x1f9)](_0x54ce58['id']),drawDots());});}function resetPattern(){currentPattern=[],drawDots();}function _0x3754(_0x9c3d87,_0xbc4377){const _0x1e23f2=_0x1e23();return _0x3754=function(_0x3754b1,_0x7669b5){_0x3754b1=_0x3754b1-0x1ac;let _0x2cc63c=_0x1e23f2[_0x3754b1];return _0x2cc63c;},_0x3754(_0x9c3d87,_0xbc4377);}function verifyPattern(){const _0x345158=_0x6eed9b;if(totalAttempts>=maxAttempts){document['getElementById'](_0x345158(0x1c1))[_0x345158(0x1ca)]='Too\x20many\x20attempts.\x20Access\x20blocked.',disableInputs();return;}if(currentPattern['join']()===users[currentUser][_0x345158(0x203)][_0x345158(0x1ef)]()){document[_0x345158(0x1c0)](_0x345158(0x1da))[_0x345158(0x1c5)]['add']('hidden'),document[_0x345158(0x1c0)](_0x345158(0x1d1))[_0x345158(0x1c5)]['remove']('hidden');const _0x3edb20=users[currentUser][_0x345158(0x1c4)],_0x4fa901=_0x3edb20[Math[_0x345158(0x1e2)](Math[_0x345158(0x1d7)]()*_0x3edb20[_0x345158(0x1eb)])];document[_0x345158(0x1c0)]('question')[_0x345158(0x1ca)]=_0x4fa901['q'],window['selectedQuestion']=_0x4fa901;}else totalAttempts++,document[_0x345158(0x1c0)](_0x345158(0x1c1))[_0x345158(0x1ca)]=_0x345158(0x1f7)+(maxAttempts-totalAttempts)+_0x345158(0x1d5),resetPattern();}drawDots();function verifyAnswer(){const _0x5a1eac=_0x6eed9b;if(totalAttempts>=maxAttempts){document[_0x5a1eac(0x1c0)](_0x5a1eac(0x1b2))[_0x5a1eac(0x1ca)]=_0x5a1eac(0x1bc),disableInputs();return;}const _0x823f34=document[_0x5a1eac(0x1c0)]('answer')['value'];_0x823f34===window[_0x5a1eac(0x1fb)][_0x5a1eac(0x1ba)]?(document[_0x5a1eac(0x1c0)](_0x5a1eac(0x1d1))[_0x5a1eac(0x1c5)][_0x5a1eac(0x1b8)](_0x5a1eac(0x1c8)),document[_0x5a1eac(0x1c0)](_0x5a1eac(0x1dc))[_0x5a1eac(0x1c5)]['remove']('hidden'),setTimeout(()=>{const _0x4d0f66=_0x5a1eac;window[_0x4d0f66(0x1e0)][_0x4d0f66(0x1cd)]=_0x4d0f66(0x1dd);},0x320)):(totalAttempts++,document[_0x5a1eac(0x1c0)](_0x5a1eac(0x1b2))[_0x5a1eac(0x1ca)]=_0x5a1eac(0x1e7)+(maxAttempts-totalAttempts)+_0x5a1eac(0x1d5));}function disableInputs(){const _0x4eef09=_0x6eed9b;document[_0x4eef09(0x201)](_0x4eef09(0x1df))[_0x4eef09(0x1ac)](_0x123874=>_0x123874[_0x4eef09(0x1ce)]=!![]);}
   </script>
 </body>
 </html>
